--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 #root {
-  max-width: 1280px;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
