--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
+html {
+  margin: 0;
+  padding: 0;
+  overflow-y: hidden !important;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-y: hidden !important;
+}
+
 #root {
   min-height: 100vh;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
   padding: 0;
   font-family: "Open Sans", sans-serif;
