--- a/src/style/MainContent.css
+++ b/src/style/MainContent.css
@@ -1,22 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 .main-content {
   flex-grow: 1;
   padding: 20px;
   overflow-y: auto;
   height: calc(100vh - 108.97px);
-}
-
-.portfolio {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.portfolio-item {
-  flex: 1 1 calc(50% - 40px);
-  max-width: calc(50% - 40px);
-}
-
-.portfolio-item img {
-  width: 100%;
-  height: auto;
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
 }
